--- a/marvel-presentation/src/main/res/values/colors.xml
+++ b/marvel-presentation/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="black_transparent_50">#80000000</color>
 </resources>
