--- a/marvel-presentation/src/main/res/values/dimens.xml
+++ b/marvel-presentation/src/main/res/values/dimens.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="zero_dp_cl">0dp</dimen>
 
     <dimen name="item_characters_list_image_height">160dp</dimen>
     <dimen name="item_characters_list_image_max_width">100dp</dimen>
     <dimen name="item_characters_list_text_size">20sp</dimen>
     <dimen name="item_characters_list_divider_height">4dp</dimen>
+    <dimen name="iv_character_detail_height">250dp</dimen>
+    <dimen name="tv_character_detail_header_size">20sp</dimen>
 </resources>
