--- a/marvel-presentation/src/main/res/values/styles.xml
+++ b/marvel-presentation/src/main/res/values/styles.xml
@@ -12,4 +12,17 @@
         <item name="android:layout_margin">4dp</item>
     </style>
 
+    <style name="CharacterDetailHeaderText">
+        <item name="android:background">@color/black_transparent_50</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/tv_character_detail_header_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CharacterDetailSectionText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/tv_character_detail_header_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
