--- a/marvel-presentation/src/main/res/layout/item_character_section.xml
+++ b/marvel-presentation/src/main/res/layout/item_character_section.xml
@@ -5,20 +5,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <View
-        android:id="@+id/upper_divider"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/white" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_section_name"
-            android:layout_width="0dp"
             style="@style/CharacterDetailSectionText"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/iv_arrow"
@@ -27,8 +21,9 @@
 
         <ImageView
             android:id="@+id/iv_arrow"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/forward_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,6 +35,5 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/white" />
-
 
 </LinearLayout>
