--- a/marvel-presentation/src/main/res/values/colors.xml
+++ b/marvel-presentation/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="black_transparent_50">#80000000</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
