--- a/marvel-presentation/src/main/res/values/styles.xml
+++ b/marvel-presentation/src/main/res/values/styles.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <style name="CharacterItemList">
         <item name="android:background">@color/marvel_black</item>
     </style>
@@ -12,17 +20,17 @@
         <item name="android:layout_margin">4dp</item>
     </style>
 
-    <style name="CharacterDetailHeaderText">
-        <item name="android:background">@color/black_transparent_50</item>
+    <style name="CharacterDetailDescriptionText">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/tv_character_detail_header_size</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:padding">@dimen/tv_character_detail_description_margin</item>
     </style>
 
     <style name="CharacterDetailSectionText">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/tv_character_detail_header_size</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">@dimen/tv_character_detail_section_margin</item>
     </style>
 
 </resources>
