--- a/marvel-presentation/src/main/res/layout/view_search.xml
+++ b/marvel-presentation/src/main/res/layout/view_search.xml
@@ -26,6 +26,7 @@
             android:hint="Search characters..."
             android:padding="8dp"
             android:textColorHint="@color/white"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tv_cancel"
             app:layout_constraintStart_toStartOf="parent"
